--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,5 @@
-{% set version = "2.26" %}
+{% set version = "2.29" %}
+{% set sha1 = "0bbe18b9c1d20e76f8d3e029713093e3ddc326f9" %}
 
 package:
   name: graph-tool
@@ -7,7 +8,7 @@ package:
 source:
   fn: graph-tool-{{ version }}.tar.bz2
   url: https://downloads.skewed.de/graph-tool/graph-tool-{{ version }}.tar.bz2
-  sha1: b716519cc0944f5d8e36948f67df5b33468153d2
+  sha1: {{ sha1 }}
 
 build:
   skip: true  # [win]
@@ -16,25 +17,27 @@ build:
 
 requirements:
   build:
-    - toolchain
     - pkg-config
-    - boost 1.64.0
+    - {{ compiler("cxx") }}
+    
+  host:
     - python
+    - numpy
+    - boost
     - expat
-    - scipy 1.0.*
-    - numpy 1.9.*
-    - cgal 4.11*
+    - scipy >=1.0
+    - cgal 4.14*
     - sparsehash 2.0.*
     - cairomm
     - pycairo
     
   run:
-    - boost 1.64.0
     - python
+    - boost
     - expat
     - scipy >=1.0
-    - numpy >=1.9
-    - cgal >=4.11
+    - {{ pin_compatible('numpy') }}
+    - cgal >=4.14
     - sparsehash >=2.0
     - cairomm
     - pycairo
