--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -71,7 +71,7 @@ test:
 
 about:
   home: https://graph-tool.skewed.de/
-  license: GPLv3
+  license: GPL-3.0
   license_file: LICENSE
   summary: Efficient network analysis
 
